2012-10-02  Joel Brobecker  <brobecker@adacore.com>

	* rs6000-nat.c (add_vmap): Set "last" to "next" after having
	unref'ed it.

2012-10-01  Andrew Burgess  <aburgess@broadcom.com>

	* target.c (simple_search_memory): Include access length in
	warning message.

2012-09-28  Nathan Miller  <nathanm2@us.ibm.com>
	    Edjunior Machado  <emachado@linux.vnet.ibm.com>

	PR gdb/13989
	* solib.c (solib_find): Prevent GDB from loading native libraries when
	debugging a cross-target corefile.

2012-09-28  selven  <pcthegreat@gmail.com>

	Make definition match declaration.

	* regcache.c (regcache_register_status): Change return type to
	enum register_status.

2012-09-28  Yao Qi  <yao@codesourcery.com>

	* mi/mi-main.c (mi_cmd_data_write_memory): Call
	write_memory_with_notification instead of write_memory.
	(mi_cmd_data_write_memory_bytes): Call write_memory_with_notification
	instead of target_write_memory.

2012-09-28  Yao Qi  <yao@codesourcery.com>

	* mi/mi-main.c (mi_cmd_data_write_memory_bytes): Emit error
	when the length of content is not an even number.

2012-09-27  Tom Tromey  <tromey@redhat.com>

	Fix https://bugzilla.redhat.com/show_bug.cgi?id=849357
	* cp-valprint.c (cp_print_value_fields): Use get_vptr_fieldno.

2012-09-27  Joel Brobecker  <brobecker@adacore.com>

	* sol-thread.c (sol_thread_fetch_registers)
	(sol_thread_store_registers): Delete commented out code.

2012-09-27  Joel Brobecker  <brobecker@adacore.com>

	* sol-thread.c (ps_lgetxregsize, ps_lgetxregs, ps_lsetxregs):
	Move these functions to sparc-sol-thread.c.
	* sparc-sol-thread.c: New file.
	* configure.ac: Add sparc-sol-thread.o to CONFIG_OBS and
	sparc-sol-thread.c to CONFIG_SRCS for sparc-solaris native
	configurations.
	* configure: Regenerate.

2012-09-27  Joel Brobecker  <brobecker@adacore.com>

	* sol-thread.c (ps_lgetxregsize, ps_lgetxregs, ps_lsetxregs):
	Remove commented-out code.

2012-09-27  Joel Brobecker  <brobecker@adacore.com>
