@@ -1,3 +1,8 @@
+2012-10-02  Andrew Burgess  <aburgess@broadcom.com>
+
+	* remote-sim.c (dump_mem): Always dump buffer contents, zero fill
+	output and use uint32_t not long to ensure 4 byte size.
+
 2012-10-02  Joel Brobecker  <brobecker@adacore.com>
 
 	* rs6000-nat.c (add_vmap): Set "last" to "next" after having
